--- a/assets/css/projetos.css
+++ b/assets/css/projetos.css
@@ -36,7 +36,7 @@
 }
 
 .card__texto {
-    text-align: justify;
+    text-align: center;
     font-size: 10px;
     visibility: visible;
     opacity: 0;
